program/ingress/Ingress_Traefik_ingress/traefik-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tomcat-deployment
  name: tomcat-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tomcat-Pod-ingress
  template:
    metadata:
      labels:
        app: tomcat-Pod-ingress
    spec:
      containers:
      - image: tomcat:8.0.50-jre8-alpine
        name: tomcat-deployment
        ports:
        - name: http
          containerPort: 8080
        - name: ajpport
          containerPort: 8009
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-svc
spec:
  selector:
    app: tomcat-Pod-ingress
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
 
---
#创建一个ingress资源
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
spec:
  rules:
  - host: master01.sunlge.com
    http:
      paths: 
      - path: /
        backend:
          serviceName: tomcat-svc
          servicePort: http
