program/ingress/Ingress_Traefik_ingress/traefik.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: traefik-ingress-lb
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      terminationGracePeriodSeconds: 60
      hostNetwork: true
      restartPolicy: Always
      serviceAccountName: ingress
      containers:
      - image: traefik
        name: traefik-ingress-lb
#        env:
#        - name: ALICLOUD_ACCESS_KEY              # 添加环境变量ALICLOUD_ACCESS_KEY
#          value: LTAIwXXXXXXXBENJ                # 阿里云RAM账号的access_key
#        - name: ALICLOUD_SECRET_KEY              # 添加环境变量ALICLOUD_SECRET_KEY
#          value: h7ukpXXXXXXXXxxT52F1BZdq0w89CA  # 阿里云RAM账号的access_secret
        resources:
          limits:
            cpu: 200m
            memory: 30Mi
          requests:
            cpu: 100m
            memory: 20Mi
##安全上下文的定义，以特权模式运行
        securityContext:
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        ports:
        - name: https
          containerPort: 443
        - name: http
          containerPort: 80
          hostPort: 80
        - name: admin
          containerPort: 8080
          hostPort: 8080
        args:

#默认ui的端口，修改为8580，与上面的containerPort要对应，默认为8080.
#        - --web
#        - --web.address=:8580
        - --kubernetes
        - --api
        - --kubernetes
        - --logLevel=INFO
        - --insecureSkipVerify=true                 # 如果后端服务是https协议时不验证其证书
        - --defaultEntryPoints=http,https           # traefik同时开启HTTP和HTTPS服务
        - --entrypoints=Name:https Address::443 TLS # HTTPS服务监听在443端口
        - --entrypoints=Name:http Address::80 Redirect.EntryPoint:https # HTTP监听在80端口，并将流量重定向至https

#以下都是有关于证书请求的参数
#        - --acme                                  # 开启证书验证
#        - --acme.acmeLogging=true                 # 打开日志，方便排错
#        - --acme.email=1415228958@qq.com          # 邮箱
#        - --acme.entryPoint=https                 # 证书类型
#        - --acme.storage=/tmp/acme.json           # 证书申请临时文件
#        - --acme.dnschallenge                     # 域名验证方式
#        - --acme.dnschallenge.provider=alidns     # 域名提供商
#        - --acme.dnschallenge.delaybeforecheck=5  # 验证域名延时
#        - --acme.httpchallenge.entrypoint=http    # 验证域名时使用的协议
#        - --acme.domains=*.sunlge.com             # 要申请证书的域名
#        - --acme.domains=*.sunlge.com             # 要申请证书的域名
      nodeSelector:
        edgenode: "true"

###以下资源是用于定义traefik的UI Gui界面的.
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - name: admin
    port: 80
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
##增basic功能.
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/auth-type: "basic"
    traefik.ingress.kubernetes.io/auth-secret: "traefik-basic" #这个value一定要是创建的secret generic资源对应名称
spec:
  rules:
  - host: node01.sunlge.com
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-web-ui
          servicePort: admin
